--- a/device-registry/package.json
+++ b/device-registry/package.json
@@ -6,7 +6,8 @@
     "dev": "ts-node-dev --respawn src/index.ts",
     "build": "tsc",
     "start": "node dist/index.js",
-    "test": "jest"
+    "test": "jest",
+    "format-fix": "prettier --config --write \"src/**/*{.ts,.tsx,.js,.jsx,.json,.json,.css,.scss,.html}\""
   },
   "keywords": [],
   "author": "",
@@ -27,6 +28,7 @@
     "@types/node": "^22.15.29",
     "jest": "^29.7.0",
     "node-cache": "^5.1.2",
+    "prettier": "3.5.3",
     "ts-jest": "^29.3.4",
     "ts-node-dev": "^2.0.0",
     "typescript": "^5.8.3"
